--- a/design.html
+++ b/design.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="req.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/hw.html"><strong aria-hidden="true">3.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="arch/sw.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="design.html" class="active"><strong aria-hidden="true">4.</strong> Design</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="req.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">3.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">3.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="design.html" class="active"><strong aria-hidden="true">4.</strong> Design</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -146,7 +146,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="design"><a class="header" href="#design">Design</a></h1>
+                        <h1 id="detail-design"><a class="header" href="#detail-design">Detail Design</a></h1>
 <p>Libre Car Contorl allows developers to:</p>
 <ul>
 <li>Read control messages from the Vehicle’s CAN Bus via Ethernet network</li>
