--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="req.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/hw.html"><strong aria-hidden="true">3.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="arch/sw.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">4.</strong> Design</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="req.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">3.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">3.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">4.</strong> Design</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -148,8 +148,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Purpose</p>
-<p>Document and track the necessary information required to effectively design Libre Car Control , an opensource car control to enable control of modern cars facilitate the development of non-proriotory vehicle technology. It provides an interface with modern vehicle’s  control systems.</p>
+<h2 id="purpose"><a class="header" href="#purpose">Purpose</a></h2>
+<p>Document and track the necessary information required to effectively design Libre Car Control, an opensource car control to enable control of modern cars facilitate the development of non-proriotory vehicle technology. It provides an interface with modern vehicle’s control systems.</p>
 <p>Developers can formulate control commands like those which determine steering wheel torque sensor, throttle position sensor, and brake position sensor.
 This low-level interface means that it offers full-range control to develop/hack ADAS features.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="product-requirements"><a class="header" href="#product-requirements">Product Requirements</a></h1>
@@ -158,9 +158,13 @@ This low-level interface means that it offers full-range control to develop/hack
 <li>convert this service to signal in Hardware</li>
 <li>use this signal in control bus of vehicle CAN network</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="hardware-architecture"><a class="header" href="#hardware-architecture">Hardware Architecture</a></h1>
-<p><img src="arch/../images/flow.svg" alt=" HW architecture" /></p>
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="core-apis"><a class="header" href="#core-apis">Core APIs</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="system-architecture"><a class="header" href="#system-architecture">System Architecture</a></h1>
+<p><img src="arch/../images/flow.svg" alt=" System architecture" /></p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="components"><a class="header" href="#components">Components</a></h1>
+<p><img src="arch/../images/top.svg" alt=" COmponents " /></p>
+<h2 id="gateware"><a class="header" href="#gateware">Gateware</a></h2>
+<h2 id="firmware"><a class="header" href="#firmware">Firmware</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="core-apis"><a class="header" href="#core-apis">Core APIs</a></h1>
 <ul>
 <li>HelloWorldPublisher - Publish a message from a node to the Vehicle bus.</li>
 <li>HelloWorldSubscriber - Subscribe a node to messages on the Vehicle bus.</li>
@@ -174,7 +178,7 @@ This low-level interface means that it offers full-range control to develop/hack
 <li>CAN Reader - Read data from a CAN device.</li>
 <li>CAN Writer - Write data to a CAN device.</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="design"><a class="header" href="#design">Design</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="detail-design"><a class="header" href="#detail-design">Detail Design</a></h1>
 <p>Libre Car Contorl allows developers to:</p>
 <ul>
 <li>Read control messages from the Vehicle’s CAN Bus via Ethernet network</li>
