--- a/print.html
+++ b/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Project Proposal</title>
+        <title>Libre Car Control</title>
                 <meta name="robots" content="noindex" />
                 
 
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="req.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">3.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">3.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">4.</strong> Design</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">2.</strong> Design</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">3.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">3.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">3.3.</strong> Interface</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -112,7 +112,7 @@
                         </button>
                                             </div>
 
-                    <h1 class="menu-title">Project Proposal</h1>
+                    <h1 class="menu-title">Libre Car Control</h1>
 
                     <div class="right-buttons">
                                                 <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -148,19 +148,26 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<h2 id="purpose"><a class="header" href="#purpose">Purpose</a></h2>
-<p>Document and track the necessary information required to effectively design Libre Car Control, an opensource car control to enable control of modern cars facilitate the development of non-proriotory vehicle technology. It provides an interface with modern vehicle’s control systems.</p>
+<p>Libre Car Control is an opensource car control to enable control of modern cars facilitate the development of non-proriotory vehicle technology. It provides an interface with modern vehicle’s control systems.</p>
 <p>Developers can formulate control commands like those which determine steering wheel torque sensor, throttle position sensor, and brake position sensor.
 This low-level interface means that it offers full-range control to develop/hack ADAS features.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="product-requirements"><a class="header" href="#product-requirements">Product Requirements</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="overview"><a class="header" href="#overview">Overview</a></h1>
+<p>Libre Car Control allows developers to:</p>
 <ul>
-<li>implement a simple service over Ethernet</li>
-<li>convert this service to signal in Hardware</li>
-<li>use this signal in control bus of vehicle CAN network</li>
+<li>Implement a simple service over Ethernet</li>
+<li>Convert this service to signal in Hardware</li>
+<li>Use this signal in control bus of vehicle CAN network</li>
 </ul>
+<h2 id="product-objectives"><a class="header" href="#product-objectives">Product Objectives</a></h2>
+<ul>
+<li>Read control messages from the Vehicle’s CAN Bus via Ethernet network</li>
+<li>Send control commands to the Vehicle’s CAN Bus via Ethernet network</li>
+</ul>
+<p>Control commands can be published to control bus in the form of Ethernet packet with pub/sub model from a node executing a path planning algorithm.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="system-architecture"><a class="header" href="#system-architecture">System Architecture</a></h1>
 <p><img src="arch/../images/flow.svg" alt=" System architecture" /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="components"><a class="header" href="#components">Components</a></h1>
+<p>The main components of system architecture are broken down in Software and Hardware.</p>
 <p><img src="arch/../images/top.svg" alt=" Components " /></p>
 <h2 id="hardware"><a class="header" href="#hardware">Hardware</a></h2>
 <p>iCE40 FPGA chip has severfal Pmod interface (peripheral module interface) for connecting peripheral modules.</p>
@@ -175,10 +182,12 @@ This low-level interface means that it offers full-range control to develop/hack
 and PHY support to enable Ethernet functionality at data rates up to 10 Mbit/s.</p>
 <p><img src="arch/../images/pmod_nic100.svg" alt=" PMOD NIC100 " /></p>
 <h2 id="gateware"><a class="header" href="#gateware">Gateware</a></h2>
-<p>We use Litex framewrok to program VexRiscv-SMP CPU Risc-V SOC on the iCEBreaker FPGA  that can be programmed from C language.</p>
+<p>We use Litex framework to program VexRiscv-SMP CPU Risc-V SOC on the iCEBreaker FPGA  that can be programmed from C language.</p>
 <p><img src="arch/../images/litex.svg" alt=" Litex " /></p>
 <h2 id="firmware"><a class="header" href="#firmware">Firmware</a></h2>
+<p>C language based device driver is used to program SPI interface that connects to CAN bus via MCP25625 and Ehternet via  ENC424J600.</p>
 <h2 id="application"><a class="header" href="#application">Application</a></h2>
+<p>Service to signal conversion layer is written to trasmit Ethernet based SOMEIP prototocol to CAN based signals. </p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="core-apis"><a class="header" href="#core-apis">Core APIs</a></h1>
 <ul>
 <li>HelloWorldPublisher - Publish a message from a node to the Vehicle bus.</li>
@@ -193,13 +202,6 @@ and PHY support to enable Ethernet functionality at data rates up to 10 Mbit/s.<
 <li>CAN Reader - Read data from a CAN device.</li>
 <li>CAN Writer - Write data to a CAN device.</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="detail-design"><a class="header" href="#detail-design">Detail Design</a></h1>
-<p>Libre Car Contorl allows developers to:</p>
-<ul>
-<li>Read control messages from the Vehicle’s CAN Bus via Ethernet network</li>
-<li>Send control commands to the Vehicle’s CAN Bus via Ethernet network</li>
-</ul>
-<p>Control commands can be published to control bus in the form of Ethernet packet with pub/sub model from a node executing a path planning algorithm.</p>
 
                     </main>
 
