--- a/print.html
+++ b/print.html
@@ -148,9 +148,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Libre Car Control is an opensource car control to enable control of modern cars facilitate the development of non-proriotory vehicle technology. It provides an interface with modern vehicle’s control systems.</p>
-<p>Developers can formulate control commands like those which determine steering wheel torque sensor, throttle position sensor, and brake position sensor.
-This low-level interface means that it offers full-range control to develop/hack ADAS features.</p>
+<p>Libre Car Control is an opensource car control effort to enable control of modern cars facilitate the development of non-proprietary vehicle technology. It provides an interface with modern vehicle’s control systems.</p>
+<p>Developers can formulate control commands like those which determine steering wheel torque sensor, throttle position sensor, and brake position sensor. This low-level interface means that it offers full-range control to develop/hack ADAS features.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="overview"><a class="header" href="#overview">Overview</a></h1>
 <p>Libre Car Control allows developers to:</p>
 <ul>
