deploy: d89cba9647faecc5b94bd2e4d20e0a612ffe139a

--- a/arch/if.html
+++ b/arch/if.html
@@ -149,12 +149,24 @@
                         <h1 id="interface"><a class="header" href="#interface">Interface</a></h1>
 <h2 id="diagnostic-interface"><a class="header" href="#diagnostic-interface">Diagnostic Interface</a></h2>
 <p>The user has On-Board Diagnostics version 2 (OBD-II) as an interface to the Diagnosis Bus of the LibreCar ECU.
-Below steps are used to send a signal:
-* Establish a connection: First, you need to establish a connection between the LibreCar OBD-II module and the diagnostic tool. This can be done using a wired or wireless connection. For example, you can connect the LibreCar OBD-II module to a Wi-Fi access point and use a diagnostic tool connected to the same network to communicate with it.
-* Set up LibreCar OBD-II module: Once the connection is established, you need to configure the LibreCar OBD-II module to communicate over IP. This can be done by setting the IP address and other network parameters.
-* Identify the OBD-II commands: The OBD-II standard defines a set of commands that can be used to communicate with the different ECUs in the vehicle. You need to identify the OBD-II commands that are relevant to the diagnostic data you are trying to retrieve.
-* Send the OBD-II commands over IP: Once you have identified the relevant OBD-II commands, you can send them over IP to the OBD-II device. You can use a diagnostic tool or a custom application to send the OBD-II commands.
-* Receive the response: Once the OBD-II commands are sent,  LibreCar OBD-II module will respond with the diagnostic data in the form of a response message. You can then parse the response message to extract the diagnostic data you need.</p>
+Below steps are used to send a signal:</p>
+<ul>
+<li>
+<p>Establish a connection: First, you need to establish a connection between the LibreCar OBD-II module and the diagnostic tool. This can be done using a wired or wireless connection. For example, you can connect the LibreCar OBD-II module to a Wi-Fi access point and use a diagnostic tool connected to the same network to communicate with it.</p>
+</li>
+<li>
+<p>Set up LibreCar OBD-II module: Once the connection is established, you need to configure the LibreCar OBD-II module to communicate over IP. This can be done by setting the IP address and other network parameters.</p>
+</li>
+<li>
+<p>Identify the OBD-II commands: The OBD-II standard defines a set of commands that can be used to communicate with the different ECUs in the vehicle. You need to identify the OBD-II commands that are relevant to the diagnostic data you are trying to retrieve.</p>
+</li>
+<li>
+<p>Send the OBD-II commands over IP: Once you have identified the relevant OBD-II commands, you can send them over IP to the OBD-II device. You can use a diagnostic tool or a custom application to send the OBD-II commands.</p>
+</li>
+<li>
+<p>Receive the response: Once the OBD-II commands are sent,  LibreCar OBD-II module will respond with the diagnostic data in the form of a response message. You can then parse the response message to extract the diagnostic data you need.</p>
+</li>
+</ul>
 <h2 id="rest-api-interface"><a class="header" href="#rest-api-interface">REST API Interface</a></h2>
 <p>The user also has REST APIs availble over http to directly talk to services in the LibreCar ECU:</p>
 <h1 id="core-apis"><a class="header" href="#core-apis">Core APIs</a></h1>
