--- a/plan.html
+++ b/plan.html
@@ -154,31 +154,45 @@
 <p>Each task completion is considered as a Major or Minor Milestone to help us break down the overall Project duration into smaller sprints which reduces the chance of the task falling into overtime, as well as speeding up the possible completion time.</p>
 <h2 id="milestones-"><a class="header" href="#milestones-">Milestones :</a></h2>
 <p>The milestones for this project have been set in a chronological order, with independent, parallelizable tasks being set at the start, and interdependent tasks being arranged in a serial order and can be done one after the other.</p>
-<pre><code>    * Develop the hardware: 
-        ** Task: Create an opensource gateware which comprises of softcore RISC-V and peripherals like CAN and Ethernet
-        ** Acceptance Criteria: Gateware can be compiled and booted up on a FPGA development board.
-        ** Duration: 80 hours
-
-    * Develop the firmware: 
-        ** Task: Create opensource firmware which comprises of kernel and device drivers to bring up RISC-V soft core and peripherals like CAN and Ethernet.
-        ** Acceptance Criteria: FPGA runs a RISC-V softcore with CAN bus and Ethernet bus communication working.
-        ** Duration: 80 hours
-
-    * Develop the middleware: 
-        ** Task: Once the hardware and firmware development are complete, the next step is to build the middleware which can support automotive protocols like Diagnostics, Log&amp;Trace and  Measuement&amp;Calibration based on Autosar(AUTomotive Open System ARchitecture) specification.
-        ** Acceptance Criteria: Below Automotive protocols are up to make it function like a modern automotive ECU:
-            *** DoIP ( Diagnostics over Internet Protocol )
-            *** DLT ( Diagnostics Log and Trace ) 
-            *** XCP (Universal Measurement and Calibration Protocol ) 
-        ** Duration: 80 hours
-
-    * Manufacturing: 
-        ** Task: After the prototype has been tested on a development FPGA board as working, the final product can be manufactured. This involves designing and producing the few PCBs available for evaluation by interested end users.
-        ** Acceptance Criteria:
-            ***  Custom PCB is available with Diagnostic Interface for end user to use the LibreCar ECU. 
-            *** Documentation is available to end user how to use the LibreCar ECU with firmware, gateware and PCB design files all available as opensource.
-        ** Duration: 80 hours
-</code></pre>
+<ul>
+<li>
+<p>Develop the hardware:</p>
+<ul>
+<li>Task: Create an opensource gateware which comprises of softcore RISC-V and peripherals like CAN and Ethernet</li>
+<li>Acceptance Criteria: Gateware can be compiled and booted up on a FPGA development board.</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Develop the firmware:</p>
+<ul>
+<li>Task: Create opensource firmware which comprises of kernel and device drivers to bring up RISC-V soft core and peripherals like CAN and Ethernet.</li>
+<li>Acceptance Criteria: FPGA runs a RISC-V softcore with CAN bus and Ethernet bus communication working.</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Develop the middleware:</p>
+<ul>
+<li>Task: Once the hardware and firmware development are complete, the next step is to build the middleware which can support automotive protocols like Diagnostics, Log&amp;Trace and  Measuement&amp;Calibration based on Autosar(AUTomotive Open System ARchitecture) specification.</li>
+<li>Acceptance Criteria: Below Automotive protocols are up to make it function like a modern automotive ECU:</li>
+<li>DoIP ( Diagnostics over Internet Protocol )</li>
+<li>DLT ( Diagnostics Log and Trace ) </li>
+<li>XCP (Universal Measurement and Calibration Protocol )</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Manufacturing:</p>
+<ul>
+<li>Task: After the prototype has been tested on a development FPGA board as working, the final product can be manufactured. This involves designing and producing the few PCBs available for evaluation by interested end users.</li>
+<li>Acceptance Criteria:</li>
+<li>Custom PCB is available with Diagnostic Interface for end user to use the LibreCar ECU.</li>
+<li>Documentation is available to end user how to use the LibreCar ECU with firmware, gateware and PCB design files all available as opensource.</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+</ul>
 
                     </main>
 
