--- a/target.html
+++ b/target.html
@@ -147,11 +147,21 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="target-group"><a class="header" href="#target-group">Target Group</a></h1>
-<p>Its modularity and versatility make it suitable for anyone in the below group :
-* Automotive manufacturers/suppliers: To develop Automotive functions like Diagnostics over an opensource HW where they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.
-* Researchers: To study current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.
-* Makers/Hobbyists: To learn how to make new products in automotive ecosystem and develop interesting Hardware and Software around it in opensource community
-* Educators/students: To understand the current working of automotive ECU and its working principles.</p>
+<p>Its modularity and versatility make it suitable for anyone in the below group :</p>
+<ul>
+<li>
+<p>Automotive manufacturers/suppliers: To develop Automotive functions like Diagnostics over an opensource HW where they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</p>
+</li>
+<li>
+<p>Researchers: To study current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</p>
+</li>
+<li>
+<p>Makers/Hobbyists: To learn how to make new products in automotive ecosystem and develop interesting Hardware and Software around it in opensource community</p>
+</li>
+<li>
+<p>Educators/students: To understand the current working of automotive ECU and its working principles.</p>
+</li>
+</ul>
 
                     </main>
 
