--- a/intro.html
+++ b/intro.html
@@ -148,17 +148,27 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The ECU is a microprocessor-based system that receives input from various sensors, analyzes the data, and controls various driving functions based on the input. LibreCar is a small and affordable Engine Control Unit (ECU), an electronic control module that manages control of an automotive vehicle. </p>
-<p>LibreCar comprises of:
-* opensource hardware
--  Opensource softcore of RISC-V
--  Digital peripheral IPs for CAN and Ethernet
-* opensource software
--  Device drivers for CAN and Ethernet
--  Middleware based on AUTOSAR specification for Automotive protocols</p>
-<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocol like 
-* DoIP ( Diagnostics over Internet Protocol )
-* DLT ( Diagnostics Log and Trace ) 
-* XCP (Universal Measurement and Calibration Protocol ) </p>
+<p>LibreCar comprises of:</p>
+<ul>
+<li>opensource hardware
+<ul>
+<li>Opensource softcore of RISC-V</li>
+<li>Digital peripheral IPs for CAN and Ethernet</li>
+</ul>
+</li>
+<li>opensource software
+<ul>
+<li>Device drivers for CAN and Ethernet</li>
+<li>Middleware based on AUTOSAR specification for Automotive protocols</li>
+</ul>
+</li>
+</ul>
+<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocol like </p>
+<ul>
+<li>DoIP ( Diagnostics over Internet Protocol )</li>
+<li>DLT ( Diagnostics Log and Trace ) </li>
+<li>XCP ( Universal Measurement and Calibration Protocol ) </li>
+</ul>
 
                     </main>
 
