--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </ul>
 </li>
 </ul>
-<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocol like </p>
+<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocols listed below: </p>
 <ul>
 <li>DoIP ( Diagnostics over Internet Protocol )</li>
 <li>DLT ( Diagnostics Log and Trace ) </li>
