--- a/print.html
+++ b/print.html
@@ -164,7 +164,7 @@
 </ul>
 </li>
 </ul>
-<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocol like </p>
+<p>LibreCar embodies both CAN Bus (Controller Area Network) or over Automotive Ethernet Bus, a switched network used in the automotive field to enable supporting modern automotive protocols listed below: </p>
 <ul>
 <li>DoIP ( Diagnostics over Internet Protocol )</li>
 <li>DLT ( Diagnostics Log and Trace ) </li>
@@ -223,7 +223,7 @@ and PHY support to enable Ethernet functionality at data rates up to 10 Mbit/s.<
 <p>C language based device driver is used to program SPI interface that connects to CAN bus via MCP25625 and Ehternet via  ENC424J600.</p>
 <h2 id="application"><a class="header" href="#application">Application</a></h2>
 <p>Service to signal conversion layer is written to trasmit Ethernet based SOMEIP prototocol to CAN based signals. </p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="interface"><a class="header" href="#interface">Interface</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="user-interface"><a class="header" href="#user-interface">User Interface</a></h1>
 <h2 id="diagnostic-interface"><a class="header" href="#diagnostic-interface">Diagnostic Interface</a></h2>
 <p>The user has On-Board Diagnostics version 2 (OBD-II) as an interface to the Diagnosis Bus of the LibreCar ECU.
 Below steps are used to send a signal:</p>
